migrate unit tests to no-raw and fix checkstyle